<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/attachment_widget_root_padding"
    android:paddingTop="@dimen/attachment_widget_root_padding"
    android:paddingEnd="@dimen/attachment_widget_root_padding"
    android:paddingBottom="@dimen/attachment_widget_root_padding">

    <LinearLayout
        android:id="@+id/widgetPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_attachment_widget_one_row_panel"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/attachment_widget_one_row_horizontal_padding"
        android:paddingTop="@dimen/attachment_widget_one_row_vertical_padding"
        android:paddingEnd="@dimen/attachment_widget_one_row_horizontal_padding"
        android:paddingBottom="@dimen/attachment_widget_one_row_vertical_padding">

        <LinearLayout
            android:id="@+id/widgetInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/attachment_widget_one_row_input_height"
            android:layout_weight="1"
            android:background="@drawable/bg_attachment_widget_active"
            android:clickable="true"
            android:contentDescription="@string/main_panel_input"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/attachment_widget_one_row_horizontal_padding"
            android:paddingEnd="@dimen/attachment_widget_one_row_horizontal_padding">

            <ImageView
                android:id="@+id/widgetLogo"
                android:layout_width="@dimen/attachment_widget_one_row_logo_size"
                android:layout_height="@dimen/attachment_widget_one_row_logo_size"
                android:contentDescription="@string/app_brand"
                android:scaleType="fitCenter"
                android:src="@drawable/freechat_logo_white_transparent" />

            <TextView
                android:id="@+id/widgetPlaceholder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/attachment_widget_one_row_text_gap"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/main_panel_input"
                android:textColor="#F5F1F8"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/widgetCamera"
            android:layout_width="@dimen/attachment_widget_one_row_button_size"
            android:layout_height="@dimen/attachment_widget_one_row_button_size"
            android:layout_marginStart="@dimen/attachment_widget_one_row_button_gap"
            android:background="@drawable/bg_attachment_widget_one_row_button"
            android:contentDescription="@string/button_camera"
            android:padding="@dimen/attachment_widget_one_row_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera_new"
            android:tint="#FFFFFF" />

        <ImageView
            android:id="@+id/widgetGallery"
            android:layout_width="@dimen/attachment_widget_one_row_button_size"
            android:layout_height="@dimen/attachment_widget_one_row_button_size"
            android:layout_marginStart="@dimen/attachment_widget_one_row_button_gap"
            android:background="@drawable/bg_attachment_widget_one_row_button"
            android:contentDescription="@string/content_desc_open_gallery"
            android:padding="@dimen/attachment_widget_one_row_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_photo_new"
            android:tint="#FFFFFF" />

        <ImageView
            android:id="@+id/widgetDocument"
            android:layout_width="@dimen/attachment_widget_one_row_button_size"
            android:layout_height="@dimen/attachment_widget_one_row_button_size"
            android:layout_marginStart="@dimen/attachment_widget_one_row_button_gap"
            android:background="@drawable/bg_attachment_widget_one_row_button"
            android:contentDescription="@string/button_files"
            android:padding="@dimen/attachment_widget_one_row_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_file_new"
            android:tint="#FFFFFF" />

        <ImageView
            android:id="@+id/widgetMic"
            android:layout_width="@dimen/attachment_widget_one_row_button_size"
            android:layout_height="@dimen/attachment_widget_one_row_button_size"
            android:layout_marginStart="@dimen/attachment_widget_one_row_button_gap"
            android:background="@drawable/bg_attachment_widget_one_row_button"
            android:contentDescription="@string/content_desc_microphone"
            android:padding="@dimen/attachment_widget_one_row_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_mic"
            android:tint="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
